MODDATAIMP-1223 - File splitting (DI) creates duplicate records (#368)